--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "plugins": [
     "react"
   ],
@@ -13,20 +13,24 @@
     "es6": true
   },
   "rules": {
-    "strict":0,
+    "strict": 0,
     "no-unused-vars": 0,
     "no-mixed-spaces-and-tabs": 0,
     "no-debugger": 0,
     "no-console": 1,
     "semi": ["error", "always"],
     "allowImportExportEverywhere": 0,
-    "comma-dangle": [1, { //when to use the last comma
+    "comma-dangle": [
+      1,
+      {
+        //when to use the last comma
         "arrays": "never",
         "objects": "never",
         "imports": "never",
         "exports": "never",
-        "functions": "ignore",
-    }],
+        "functions": "ignore"
+      }
+    ],
     "react/prop-types": [2]
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"]
