--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"caniuse-lite": "^1.0.30001478",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
